# sample_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entrypoint.py  manage.py  pyproject.toml
db/conf.d/: my.cnf
sample_service/: asgi.py  settings.py  urls.py  wsgi.py
service/: admin.py  models.py
service/migrations/: 0001_initial.py
xtrabackup/5.6.33/: Dockerfile
xtrabackup/5.7.26/: docker-compose.yml
