[tool.poetry]
name = "xtrabackup"
version = "0.1.0"
description = ""
authors = ["taeju.kim <taeju.kim@nhnsoft.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
